feat(TS-34): add review support (#26)
