# model/apiApplicationsStatusGet200Response.ts
@@ -1,0 +1,49 @@
+/**
+ * Trentino Stage API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+
+export class ApiApplicationsStatusGet200Response {
+    'id'?: string;
+    'issuerId'?: string;
+    'status'?: string;
+    'otherFields'?: object;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "id",
+            "baseName": "_id",
+            "type": "string"
+        },
+        {
+            "name": "issuerId",
+            "baseName": "issuer_id",
+            "type": "string"
+        },
+        {
+            "name": "status",
+            "baseName": "status",
+            "type": "string"
+        },
+        {
+            "name": "otherFields",
+            "baseName": "other_fields",
+            "type": "object"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return ApiApplicationsStatusGet200Response.attributeTypeMap;
+    }
+}
+
