# public/swagger.json
@@ -243,6 +243,253 @@
         }
       }
     },
+    "/api/applications/modify": {
+      "post": {
+        "summary": "Modify an existing application",
+        "description": "This endpoint allows you to modify an existing application by providing the necessary fields. Can also be used to set a chosen user for the application.",
+        "consumes": [
+          "multipart/form-data"
+        ],
+        "parameters": [
+          {
+            "in": "formData",
+            "name": "token",
+            "type": "string",
+            "required": true,
+            "description": "Session token for authentication."
+          },
+          {
+            "in": "formData",
+            "name": "title",
+            "type": "string",
+            "required": true,
+            "description": "Title of the application."
+          },
+          {
+            "in": "formData",
+            "name": "description",
+            "type": "string",
+            "required": true,
+            "description": "Description of the application."
+          },
+          {
+            "in": "formData",
+            "name": "sector",
+            "type": "string",
+            "required": true,
+            "description": "Sector of the application."
+          },
+          {
+            "in": "formData",
+            "name": "country",
+            "type": "string",
+            "required": true,
+            "description": "Country of the application."
+          },
+          {
+            "in": "formData",
+            "name": "region",
+            "type": "string",
+            "required": true,
+            "description": "Region of the application."
+          },
+          {
+            "in": "formData",
+            "name": "city",
+            "type": "string",
+            "required": true,
+            "description": "City of the application."
+          },
+          {
+            "in": "formData",
+            "name": "weekly_hours",
+            "type": "integer",
+            "required": true,
+            "description": "Weekly hours for the application."
+          },
+          {
+            "in": "formData",
+            "name": "chosen_user",
+            "type": "string",
+            "required": false,
+            "description": "Chosen user for the application."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Application modified successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Application modified successfully"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Missing required fields",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "Missing required fields"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Invalid token",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Invalid token"
+                    },
+                    "code": {
+                      "type": "string",
+                      "example": "error-invalid-session-token"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "405": {
+            "description": "Unsupported content type",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Unsupported content type"
+                    },
+                    "code": {
+                      "type": "string",
+                      "example": "error-invalid-request"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error modifying application",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Error modifying application"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/applications/status": {
+      "get": {
+        "summary": "Retrieve the status of a specific application",
+        "description": "Endpoint for companies to view the status of their applications.",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "token",
+            "required": true,
+            "description": "Session token for authentication",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "in": "query",
+            "name": "applicationId",
+            "required": true,
+            "description": "The ID of the application to retrieve",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully retrieved the application status",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string"
+                    },
+                    "issuer_id": {
+                      "type": "string"
+                    },
+                    "status": {
+                      "type": "string"
+                    },
+                    "other_fields": {
+                      "type": "object"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Missing required fields or invalid session token",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    },
+                    "code": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Application not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    },
+                    "code": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/profiles/get": {
       "get": {
         "summary": "Retrieve profile information",
